# Othello

./: .gitignore  AI.cpp  AI.h  CMakeLists.txt  Client.cpp  Client.h  Constants.h  GameController.cpp  GameController.h  main.cpp
